<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IP Pro</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_ip">IP Address</string>
    <string name="label_isp">ISP</string>
    <string name="label_country">Country</string>
    <string name="label_city">City</string>
    <string name="label_region">Region</string>
    <string name="label_coordinates">Map</string>
    <string name="last_update_status_success">Request completed in %d ms</string>
    <string name="last_update_status_fail">Request failed after %d ms</string>
    <string name="last_update_status_timeout">Request timed out after %d s</string>
    <string name="last_update_time">Last updated at %s</string>
    <string name="loading_message">Loading&#8230;</string>
    <string name="proxy_settings_title">Local HTTP Proxy Port</string>
    <string name="proxy_settings_radio_none">No proxy</string>
    <string name="proxy_settings_radio_psiphon">Psiphon (8080)</string>
    <string name="proxy_settings_radio_tor">Orbot (8118)</string>
    <string name="proxy_settings_radio_custom">Custom port</string>
    <string name="proxy_settings_custom_port">Port</string>
    <string name="network_info_title">Network Interface</string>
    <string name="network_info_subtitle_active_network">Active Network</string>
    <string name="network_info_subtitle_wifi_info">Wi-Fi</string>
    <string name="network_info_subtitle_dhcp_info">DHCP</string>
    <string name="network_info_subtitle_active_dns">Active DNS</string>
    <string name="network_info_subtitle_interfaces">Interfaces</string>
    <string name="network_info_hidden_network">Hidden SSID</string>
    <string name="network_info_label_ip_address">IP Address</string>
    <string name="network_info_label_gateway">Gateway</string>
    <string name="network_info_label_netmask">Netmask</string>
    <string name="network_info_label_dhcp_server">DHCP Server</string>
    <string name="network_info_label_lease_duration">Lease Duration</string>
    <string name="network_info_label_mtu">MTU</string>
    <string name="network_info_label_dns">DNS</string>
    <string name="geoip_provider_settings_title">GeoIP Provider</string>
    <string name="geoip_provider_settings_radio_auto">Automatic</string>
    <string name="geoip_provider_settings_radio_freegeoipdotnet">freegeoip.net</string>
    <string name="geoip_provider_settings_radio_telizedotcom">Telize</string>
    <string name="network_diagnostics_title">Test Network Connection</string>
    <string name="network_diagnostics_choice_all_tests">Run all tests</string>
    <string name="network_diagnostics_choice_small_download">Small download test (100KB)</string>
    <string name="network_diagnostics_choice_medium_download">Medium download test (1MB)</string>
    <string name="network_diagnostics_choice_large_download">Large download test (10MB)</string>
    <string-array name="network_diagnostics_tests">
        <item>@string/network_diagnostics_choice_all_tests</item>
        <item>@string/network_diagnostics_choice_small_download</item>
        <item>@string/network_diagnostics_choice_medium_download</item>
        <item>@string/network_diagnostics_choice_large_download</item>
    </string-array>
    <string name="network_diagnostics_start">Start</string>

</resources>
